[tool.poetry]
name = "project_mohri_nishimura"
version = "0.1.0"
description = ""
authors = ["Takashi Yamanashi <takashi.yamanashi@riken.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
scanpy = "^1.8.2"
jupyterlab = "^3.2.4"
igraph = "^0.9.8"
louvain = "^0.7.0"
h5py = "^3.6.0"
pandas = "1.2.5"
mygene = "^3.2.2"
fa2 = "^0.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
